--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -23,6 +23,8 @@ ft_substr.c ft_tolower.c ft_toupper.c
 BNSSRC = \
 ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c ft_lstdelone.c \
 ft_lstiter.c ft_lstlast.c ft_lstmap.c ft_lstnew.c ft_lstsize.c
+MINESRC = \
+	  ft_streq.c
 NAME = libft.a
 
 
